--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <a href="https://instagram.com/anak_lanang_jawa" target="_blank" title="Instagram">
     <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
   </a>
-  <a href="https://tiktok.com/•anak_lanang•" target="_blank" title="TikTok">
+ <a href="https://www.tiktok.com/@anak_lanang3101" target="_blank" title="TikTok">
     <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok">
   </a>
   <a href="https://youtube.com/channel/BocahLanang" target="_blank" title="YouTube">
@@ -64,3 +64,4 @@
 </center>
 </body>
 </html>
+
